--- a/bookApp/views/index.ejs
+++ b/bookApp/views/index.ejs
@@ -30,10 +30,12 @@
         <p class="card-text" ><%= book.description %> <br></p>
         <p class="card-text" ><%= book.author %> <br></p>
         <a href="#" class="btn btn-primary ">Save book</a>
-        <form  method="post action="/delete">
-          <a href="/remove/<%=book._id %>" class="btn btn-primary delete">Delete book</a>
-        </form>
 
+
+        <form method="POST" action="/delete/<%= book._id %>">
+          <button type="submit" class="btn btn-primary">Delete book</button>
+      </form>
+      
       </div>
     </div>
  <% })%>
